--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  font-family: sans-serif;
+}
+
 main {
-  margin: 120px 50px 10px;
+  margin: 20px 50px 10px;
 }
 
 /* Medium devices (tablets, 768px and up) */
